--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-   <title>handy man</title>
+   <title>Handy Man Services</title>
+   <link rel="stylesheet" href="styles.css">
+   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
-<body>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MGEWMKD1N6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MGEWMKD1N6');
+</script>
+
+<body style="color:powderblue;">
    <div>
-      <h1>Handy Man Services</h1>
+      <h1 style="color: chocolate;"><strong>Handy Man Services</strong></h1>
+      <p style="color:tomato;"><b>Best Services</b></p>
+      <p>The <abbr title="Handy Man Service Organization">HMSO</abbr> was founded in 2015.</p>
+      <p style="border: 2px dotted tomato;" id="BorderTest">Choose us!</p>
    </div>
-   <img src="static/Handy.gif" width="250" height="250" alt="problems with logo">
+   <a href="https://google.com" target="_blank">
+      <img src="images/Handy.gif" width="250" height="250" alt="Company logotype">
+   </a>
+   <address>
+      Written by Spartak Doe.<br>
+      Contact us by:<br>
+      <a href="mailto:home.services.colorado11@gmail.com" target="_blank">home.services.colorado11@gmail.com</a><br>
+      <a href="tel:+1 707 867 077" target="_blank">+1 707 867 077</a><br>
+   </address>
+   <br>
 </body>
+
 </html>
