Updating measurement-id

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MGEWMKD1N6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJXXMT0X2X"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
