--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJXXMT0X2X"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+   window.dataLayer = window.dataLayer || [];
+   function gtag() { dataLayer.push(arguments); }
+   gtag('js', new Date());
 
-  gtag('config', 'G-MGEWMKD1N6');
+   gtag('config', 'G-ZJXXMT0X2X');
 </script>
 
 <body style="color:powderblue;">
