--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en-US">
 
 <head>
+   <meta charset="UTF-8">
+   <meta name="keywords" content="Painting, Houses, Home, Garage, Door, GarageDoor, brush, repair, clean, cleaning">
+   <meta name="description" content="Handy Man Services in Colorado, US">
+   <meta name="author" content="Spartak Doe">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Handy Man Services</title>
-   <link rel="stylesheet" href="styles.css">
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -17,23 +24,62 @@
    gtag('config', 'G-ZJXXMT0X2X');
 </script>
 
-<body style="color:powderblue;">
-   <div>
-      <h1 style="color: chocolate;"><strong>Handy Man Services</strong></h1>
-      <p style="color:tomato;"><b>Best Services</b></p>
-      <p>The <abbr title="Handy Man Service Organization">HMSO</abbr> was founded in 2015.</p>
-      <p style="border: 2px dotted tomato;" id="BorderTest">Choose us!</p>
+<body>
+   <div class="wholepage">
+      <div id="sitewrapper">
+         <div class="navbar">
+            <nav id="navbar" class="">
+               <div class="" id="hamburger"><span class="material-symbols-outlined">menu</span></div>
+               <div class="" id="PageTitle"><a href="">Garage door services from Elay</a></div>
+               <div class="action-list-2" id="Quotes"><a href="">
+                     <span class="material-symbols-outlined icons">request_quote</span>
+                     <span>Get Qoute</span>
+                  </a></div>
+               <div class="action-list-2"><a href="tel:+1 707 867 077" target="_self">
+                     <span class="material-symbols-outlined icons">call</span>
+                     <span>Call now</span>
+                  </a></div>
+               <div class="action-list-2"><a href="" id="map-link">
+                     <span class="material-symbols-outlined icons" id="map-icon">map</span>
+                     <span>Get Directions</span>
+                  </a></div>
+            </nav>
+         </div>
+         <div class="header-panel">
+            <div class="upper-header">
+               <div>
+                  <h1 id="Handy-title">
+                     <span>Handy Man Services</span>
+                  </h1>
+               </div>
+               <div>
+                  <span>Garage Door Supplier in Colorado</span>
+               </div>
+               <div class="opening-hours">
+                  Opened everyday from 8AM to 6PM!
+               </div>
+               <div class="header-quote">
+                  <a href="#">GET QUOTE</a>
+               </div>
+            </div>
+            <div class="lower-header">
+               <picture id="header-image">
+                  <source media="(max-width: 480px)" srcset="images/header-480.jpeg">
+                  <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-768.jpeg">
+                  <img src="images/header-1080.jpeg" alt="header-image">
+               </picture>
+               <img src="images/Handy.gif" width="250" height="250" alt="Company logotype">
+               <address>
+                  Written by Spartak Doe.<br>
+                  Contact us by:<br>
+                  <a href="mailto:home.services.colorado11@gmail.com"
+                     target="_blank">home.services.colorado11@gmail.com</a><br>
+                  <a href="tel:+1 707 867 077" target="_self">+1 707 867 077</a><br>
+               </address>
+            </div>
+         </div>
+      </div>
    </div>
-   <a href="https://google.com" target="_blank">
-      <img src="images/Handy.gif" width="250" height="250" alt="Company logotype">
-   </a>
-   <address>
-      Written by Spartak Doe.<br>
-      Contact us by:<br>
-      <a href="mailto:home.services.colorado11@gmail.com" target="_blank">home.services.colorado11@gmail.com</a><br>
-      <a href="tel:+1 707 867 077" target="_blank">+1 707 867 077</a><br>
-   </address>
-   <br>
 </body>
 
 </html>
