Hot-fixgh pr create

--- a/index.html
+++ b/index.html
@@ -63,16 +63,20 @@
                </div>
             </div>
             <div class="lower-header">
-               <picture id="header-image">
-                  <source media="(max-width: 480px)" srcset="images/header-480.jpeg">
-                  <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-768.jpeg">
-                  <img src="images/header-1080.jpeg" alt="header-image">
-               </picture>
-               <img src="images/Handy.gif" width="250" height="250" alt="Company logotype">
+               <div>
+                  <picture id="header-image">
+                     <source media="(max-width: 480px)" srcset="images/header-480.jpeg">
+                     <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-768.jpeg">
+                     <img src="images/header-1080.jpeg" alt="header-image">
+                  </picture>
+               </div>
+               <div id="logo_img">
+                  <img src="images/Handy.gif" alt="Company logotype">
+               </div>
                <address>
                   Written by Spartak Doe.<br>
                   Contact us by:<br>
-                  <a href="mailto:home.services.colorado11@gmail.com"
+                  <a id="email" href="mailto:home.services.colorado11@gmail.com"
                      target="_blank">home.services.colorado11@gmail.com</a><br>
                   <a href="tel:+1 707 867 077" target="_self">+1 707 867 077</a><br>
                </address>
