--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
                      <img src="images/header-1080.jpeg" alt="header-image">
                   </picture>
                </div>
-               <div id="logo_img">
+               <!-- It has too low quality to be displayed... -->
+               <!-- <div id="logo_img">
                   <img src="images/Handy.gif" alt="Company logotype">
-               </div>
+               </div> -->
                <address>
                   Written by Spartak Doe.<br>
                   Contact us by:<br>
