--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
    <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+   <script src="https://code.jquery.com/jquery-2.1.0.min.js"
+      integrity="sha256-8oQ1OnzE2X9v4gpRVRMb1DWHoPHJilbur1LP9ykQ9H0=" crossorigin="anonymous">
+      </script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -26,9 +29,9 @@
 
 <body>
    <div class="wholepage">
-      <div id="sitewrapper">
-         <div class="navbar">
-            <nav id="navbar" class="">
+      <div class="nav-wrapper">
+         <div class="nav">
+            <nav id="nav" class="">
                <div class="" id="hamburger"><span class="material-symbols-outlined">menu</span></div>
                <div class="" id="PageTitle"><a href="">Garage door services from Elay</a></div>
                <div class="action-list-2" id="Quotes"><a href="">
@@ -45,6 +48,8 @@
                   </a></div>
             </nav>
          </div>
+      </div>
+      <div id="sitewrapper">
          <div class="header-panel">
             <div class="upper-header">
                <div>
@@ -85,6 +90,7 @@
          </div>
       </div>
    </div>
+   <script src="scripts/navbar.js"></script>
 </body>
 
 </html>
