Added few features

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="keywords" content="Painting, Houses, Home, Garage, Door, GarageDoor, brush, repair, clean, cleaning">
-   <meta name="description" content="Handy Man Services in Colorado, US">
+   <meta name="description" content="Garage door services in Colorado, US">
    <meta name="author" content="Spartak Doe">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Handy Man Services</title>
+   <title>Garage door services from Elay</title>
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
    <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet"
@@ -29,35 +29,15 @@
 
 <body>
    <div class="wholepage">
-      <div class="nav-wrapper">
-         <div class="nav">
-            <nav id="nav" class="">
-               <div class="" id="hamburger"><span class="material-symbols-outlined">menu</span></div>
-               <div class="" id="PageTitle"><a href="">Garage door services from Elay</a></div>
-               <div class="action-list-2" id="Quotes"><a href="">
-                     <span class="material-symbols-outlined icons">request_quote</span>
-                     <span>Get Qoute</span>
-                  </a></div>
-               <div class="action-list-2"><a href="tel:+1 707 867 077" target="_self">
-                     <span class="material-symbols-outlined icons">call</span>
-                     <span>Call now</span>
-                  </a></div>
-               <div class="action-list-2"><a href="" id="map-link">
-                     <span class="material-symbols-outlined icons" id="map-icon">map</span>
-                     <span>Get Directions</span>
-                  </a></div>
-            </nav>
-         </div>
-      </div>
       <div id="sitewrapper">
          <div class="header-panel">
             <div class="upper-header">
                <div>
                   <h1 id="Handy-title">
-                     <span>Handy Man Services</span>
+                     <span>Garage door services from Elay</span>
                   </h1>
                </div>
-               <div>
+               <div class="garage">
                   <span>Garage Door Supplier in Colorado</span>
                </div>
                <div class="opening-hours">
@@ -68,27 +48,73 @@
                </div>
             </div>
             <div class="lower-header">
-               <div>
-                  <picture id="header-image">
-                     <source media="(max-width: 480px)" srcset="images/header-480.jpeg">
-                     <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-768.jpeg">
-                     <img src="images/header-1080.jpeg" alt="header-image">
-                  </picture>
-               </div>
-               <!-- It has too low quality to be displayed... -->
-               <!-- <div id="logo_img">
-                  <img src="images/Handy.gif" alt="Company logotype">
-               </div> -->
-               <address>
-                  Written by Spartak Doe.<br>
-                  Contact us by:<br>
-                  <a id="email" href="mailto:home.services.colorado11@gmail.com"
-                     target="_blank">home.services.colorado11@gmail.com</a><br>
-                  <a href="tel:+1 707 867 077" target="_self">+1 707 867 077</a><br>
-               </address>
+               <picture id="header-image">
+                  <source media="(max-width: 480px)" srcset="images/header-480.jpeg">
+                  <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-768.jpeg">
+                  <img src="images/header-1080.jpeg" alt="header-image">
+               </picture>
+            </div>
+         </div>
+         <div id="about-us">
+            <hr>
+            <h2>About us</h2>
+            <p>
+               If you need reliable garage door repair in Longmont, CO, you've come to the right place. Our experienced
+               technicians can handle all garage door issues, from fixing springs to repairing openers and providing
+               maintenance. We prioritize exceptional customer service, ensuring your specific needs are met. We offer
+               thorough assessments before starting any work, and we also provide installation services for new garage
+               doors and openers from top manufacturers. Say goodbye to garage door problems and contact us in Longmont,
+               CO, for swift and effective solutions.
+            </p>
+         </div>
+         <section>
+            <hr>
+            <h2>Updates</h2>
+         </section>
+      </div>
+      <div class="nav-wrapper top">
+         <div class="navbar">
+            <nav class="nav top">
+               <div class="" id="hamburger"><span class="material-symbols-outlined">menu</span></div>
+               <div class="garage" id="PageTitle"><a href="">Garage door services from Elay</a></div>
+               <div class="action-list-2" id="Quotes"><a href="">
+                     <span class="material-symbols-outlined icons">request_quote</span>
+                     <span class="text">Get Qoute</span>
+                  </a></div>
+               <div class="action-list-2"><a href="tel:+1 707 867 077" target="_self">
+                     <span class="material-symbols-outlined icons">call</span>
+                     <span class="text">Call now</span>
+                  </a></div>
+               <div class="action-list-2"><a href="https://maps.app.goo.gl/Q7fy3Eoit4EmLQ7Q7?g_st=iw" id="map-link"
+                     target="_blank">
+                     <span class="material-symbols-outlined icons" id="map-icon">map</span>
+                     <span class="text">Get Directions</span>
+                  </a></div>
+            </nav>
+         </div>
+      </div>
+      <div class="nav-wrapper bottom">
+         <div class="nav bottom">
+            <div class="box"><a href="">
+                  <span class="material-symbols-outlined icons">request_quote</span>
+                  <span class="text">Qoute</span>
+               </a>
+            </div>
+            <div class="box">
+               <a href="tel:+1 707 867 077" target="_self">
+                  <span class="material-symbols-outlined icons">call</span>
+                  <span class="text">Call</span>
+               </a>
+            </div>
+            <div class="box">
+               <a href="https://maps.app.goo.gl/Q7fy3Eoit4EmLQ7Q7?g_st=iw" id="map-link" target="_blank">
+                  <span class="material-symbols-outlined icons" id="map-icon">map</span>
+                  <span class="text">Directions</span>
+               </a>
             </div>
          </div>
       </div>
+
    </div>
    <script src="scripts/navbar.js"></script>
 </body>
