Logo + new front img

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                      <span>Garage door services from Elay</span>
                   </h1>
                </div>
+               <img src="images/Handy.gif" alt="CompanyLogo">
                <div class="garage">
                   <span>Garage Door Supplier in Colorado</span>
                </div>
@@ -71,9 +72,9 @@
             </div>
             <div class="lower-header">
                <picture id="header-image">
-                  <source media="(max-width: 480px)" srcset="images/header-480.jpeg" width="480">
-                  <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-768.jpeg">
-                  <img src="images/header-1080.jpeg" alt="header-image" width="1080" height="608">
+                  <source media="(max-width: 480px)" srcset="images/header-image-480x270.jpeg" width="480">
+                  <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-image-768x432.jpeg">
+                  <img src="images/header-image-1080x608.jpg" alt="header-image" width="1080" height="608">
                </picture>
             </div>
          </div>
@@ -107,7 +108,7 @@
                      <span class="material-symbols-outlined icons">call</span>
                      <span class="text">Call now</span>
                   </a></div>
-               <div class="action-list-2"><a href="https://maps.app.goo.gl/Q7fy3Eoit4EmLQ7Q7?g_st=iw" id="map-link"
+               <div class="action-list-2"><a href="https://maps.app.goo.gl/5HuwmgAwaCW3LJnF6?g_st=iw" id="map-link"
                      target="_blank">
                      <span class="material-symbols-outlined icons" id="map-icon">map</span>
                      <span class="text">Get Directions</span>
@@ -129,7 +130,7 @@
                </a>
             </div>
             <div class="box">
-               <a href="https://maps.app.goo.gl/Q7fy3Eoit4EmLQ7Q7?g_st=iw" id="map-link" target="_blank">
+               <a href="https://maps.app.goo.gl/5HuwmgAwaCW3LJnF6?g_st=iw" id="map-link" target="_blank">
                   <span class="material-symbols-outlined icons" id="map-icon">map</span>
                   <span class="text">Directions</span>
                </a>
