Gallery + new phone number

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="keywords" content="Painting, Houses, Home, Garage, Door, GarageDoor, brush, repair, clean, cleaning">
-   <meta name="description" content="Garage door services in Colorado, US">
+   <meta name="description" content="Arrowhead Garage Door Services in Colorado, US">
    <meta name="author" content="Spartak Doe">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Garage door services from Elay</title>
+   <title>Arrowhead Garage Door Services</title>
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
    <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet"
@@ -56,7 +56,7 @@
             <div class="upper-header">
                <div>
                   <h1 id="Handy-title">
-                     <span>Garage door services from Elay</span>
+                     <span>Arrowhead Garage Door Services</span>
                   </h1>
                </div>
                <img src="images/Handy.gif" alt="CompanyLogo">
@@ -90,21 +90,85 @@
                CO, for swift and effective solutions.
             </p>
          </div>
-         <section>
+         <div>
             <hr>
-            <h2>Updates</h2>
-         </section>
+            <h2>Gallery</h2>
+            <div id="gallery">
+               <div class="gallery-blocks"><img src="gallery/buisness-photo.jpeg" alt="buisness-photo-1"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo2.jpeg" alt="buisness-photo-2"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo3.jpeg" alt="buisness-photo-3"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo4.jpeg" alt="buisness-photo-4"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo5.jpeg" alt="buisness-photo-5"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo6.jpeg" alt="buisness-photo-6"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo7.jpeg" alt="buisness-photo-7"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo8.jpeg" alt="buisness-photo-8"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo9.jpeg" alt="buisness-photo-9"
+                     class="gallery-images"></div>
+
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo10.jpeg" alt="buisness-photo-10"
+                     class="gallery-images"></div>
+
+               </img>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo11.jpeg" alt="buisness-photo-11"
+                     class="gallery-images">
+
+                  </img></div>
+               <div class="gallery-blocks"><img src="gallery/buisness-photo12.jpeg" alt="buisness-photo-12"
+                     class="gallery-images">
+
+                  </img></div>
+            </div>
+         </div>
+         <div id="contact-us">
+            <hr>
+            <h2>Contact us</h2>
+         </div>
+
       </div>
       <div class="nav-wrapper top">
          <div class="navbar">
             <nav class="nav top">
                <div class="" id="hamburger"><a href="#"><span class="material-symbols-outlined">menu</span></a></div>
-               <div class="garage" id="PageTitle"><a href="">Garage door services from Elay</a></div>
+               <div class="garage" id="PageTitle"><a href="">Arrowhead Garage Door Services from Elay</a></div>
                <div class="action-list-2" id="Quotes"><a href="#" onclick="openQouteForm()">
                      <span class="material-symbols-outlined icons">request_quote</span>
                      <span class="text">Get Qoute</span>
                   </a></div>
-               <div class="action-list-2"><a href="tel:+1 707 867 077" target="_self">
+               <div class="action-list-2"><a href="tel:720 637 4921" target="_self">
                      <span class="material-symbols-outlined icons">call</span>
                      <span class="text">Call now</span>
                   </a></div>
@@ -124,7 +188,7 @@
                </a>
             </div>
             <div class="box">
-               <a href="tel:+1 707 867 077" target="_self">
+               <a href="tel:720 637 4921" target="_self">
                   <span class="material-symbols-outlined icons">call</span>
                   <span class="text">Call</span>
                </a>
