--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <title>Arrowhead Garage Door Services</title>
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
    <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="hamburger_styles.css">
    <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
    <script src="https://code.jquery.com/jquery-2.1.0.min.js"
@@ -66,7 +67,7 @@
                <div class="opening-hours">
                   Opened everyday from 8AM to 6PM!
                </div>
-               <div class="header-quote">
+               <div class="default-button">
                   <a href="#" onclick="openQouteForm()">GET QUOTE</a>
                </div>
             </div>
@@ -90,7 +91,7 @@
                CO, for swift and effective solutions.
             </p>
          </div>
-         <div>
+         <div id="gallery-bookmark">
             <hr>
             <h2>Gallery</h2>
             <div id="gallery">
@@ -156,13 +157,70 @@
          <div id="contact-us">
             <hr>
             <h2>Contact us</h2>
+            <div id="contact-us-map">
+               <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89103.74805357258!2d-104.80755964710441!3d39.95982084187436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c6c53b236ab27%3A0xa3a7933ede192173!2sBrighton%2C%20CO!5e0!3m2!1sen!2sus!4v1694274166402!5m2!1sen!2sus"
+                  style="border:0;" allowfullscreen="" loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <h3>Contact</h3>
+            <div class="default-button"><a href="tel:720 637 4921" target="_self">CALL NOW</a>
+               <ul>
+                  <li>(720) 990-5273</li>
+               </ul>
+            </div>
+            <h3>Address</h3>
+            <div class="default-button"><a href="https://maps.app.goo.gl/5HuwmgAwaCW3LJnF6?g_st=iw" target="_blank">GET
+                  DIRECTIONS</a>
+               <div>
+                  <ul>
+                     <li>Brighton, Colorado</li>
+                     <li>USA</li>
+                  </ul>
+               </div>
+               <h3>Business Hours</h3>
+               <div bis_skin_checked="1">
+                  <table itemprop="openingHours">
+                     <tbody>
+                        <tr>
+                           <th class="x2TOCf">Mon:</th>
+                           <td class="o0m3Qb"><span class="WF8WNe">7:00 AM – 7:00 PM</span></td>
+                        </tr>
+                        <tr>
+                           <th class="x2TOCf">Tue:</th>
+                           <td class="o0m3Qb"><span class="WF8WNe">7:00 AM – 7:00 PM</span></td>
+                        </tr>
+                        <tr>
+                           <th class="x2TOCf">Wed:</th>
+                           <td class="o0m3Qb"><span class="WF8WNe">7:00 AM – 7:00 PM</span></td>
+                        </tr>
+                        <tr>
+                           <th class="x2TOCf">Thu:</th>
+                           <td class="o0m3Qb"><span class="WF8WNe">7:00 AM – 7:00 PM</span></td>
+                        </tr>
+                        <tr>
+                           <th class="x2TOCf">Fri:</th>
+                           <td class="o0m3Qb"><span class="WF8WNe">7:00 AM – 7:00 PM</span></td>
+                        </tr>
+                        <tr>
+                           <th class="x2TOCf">Sat:</th>
+                           <td class="o0m3Qb"><span class="WF8WNe">Closed</span></td>
+                        </tr>
+                        <tr>
+                           <th class="x2TOCf">Sun:</th>
+                           <td class="o0m3Qb"><span class="WF8WNe">7:00 AM – 7:00 PM</span></td>
+                        </tr>
+                     </tbody>
+                  </table>
+               </div>
+            </div>
          </div>
 
       </div>
       <div class="nav-wrapper top">
          <div class="navbar">
             <nav class="nav top">
-               <div class="" id="hamburger"><a href="#"><span class="material-symbols-outlined">menu</span></a></div>
+               <div class="" id="hamburger"><button class="menu-toggle">Menu</button></div>
                <div class="garage" id="PageTitle"><a href="">Arrowhead Garage Door Services from Elay</a></div>
                <div class="action-list-2" id="Quotes"><a href="#" onclick="openQouteForm()">
                      <span class="material-symbols-outlined icons">request_quote</span>
@@ -180,6 +238,18 @@
             </nav>
          </div>
       </div>
+      <div id="side-bar">
+         <ul class="side-list">
+            <li class="side-list-item"><a href="#about-us" class="side-link">About us</a></li>
+            <li class="side-list-item"><a href="#gallery-bookmark" class="side-link">Gallery</a></li>
+            <li class="side-list-item"><a href="#contact-us" class="side-link">Contact</a></li>
+            <!-- Future links -->
+            <!-- <li class="side-list-item"><a href="" class="side-link"></a></li> -->
+            <!-- <li class="side-list-item"><a href="" class="side-link"></a></li> -->
+            <!-- <li class="side-list-item"><a href="" class="side-link"></a></li> -->
+         </ul>
+      </div>
+      <br>
       <div class="nav-wrapper bottom">
          <div class="nav bottom">
             <div class="box"><a href="#" onclick="openQouteForm()">
