New fonts + about-us modification

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
    <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet" href="hamburger_styles.css">
+   <link rel="stylesheet" href="fonts.css">
    <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
    <script src="https://code.jquery.com/jquery-2.1.0.min.js"
@@ -83,12 +84,21 @@
             <hr>
             <h2>About us</h2>
             <p>
-               If you need reliable garage door repair in Longmont, CO, you've come to the right place. Our experienced
-               technicians can handle all garage door issues, from fixing springs to repairing openers and providing
-               maintenance. We prioritize exceptional customer service, ensuring your specific needs are met. We offer
-               thorough assessments before starting any work, and we also provide installation services for new garage
-               doors and openers from top manufacturers. Say goodbye to garage door problems and contact us in Longmont,
-               CO, for swift and effective solutions.
+               If you're on the hunt for trustworthy and skilled solutions to mend your garage door in Longmont, CO,
+               you've reached the right spot — our well-regarded garage door repair establishment. Our squad of adept
+               technicians carries a wealth of industry experience and stands ready to manage projects of any magnitude.
+               In our business, we are experts in a diverse array of garage door repair services. Whether it's
+               rectifying fractures in torsion springs, rectifying glitches in garage door openers, or delivering
+               routine maintenance, our technicians are extensively trained and equipped with the prowess to rapidly
+               identify and resolve any garage door conundrums. Distinguishing ourselves through exceptional customer
+               service, we collaborate closely with you to ensure your distinct garage door repair prerequisites are
+               addressed. Whether you're seeking a swift fix or a comprehensive replacement, we provide a thorough
+               appraisal prior to initiating any undertakings, affording you precise insights into the forthcoming
+               proceedings. Beside our repair capacities, we extend installation services for fresh garage doors and
+               openers. Our selection solely comprises top-tier products from premier manufacturers, assuring the
+               enduring performance of your new garage door or opener. Bid adieu to the strain and vexation linked with
+               a malfunctioning garage door. Waste no time in contacting our Longmont, CO-based garage door repair
+               enterprise to book an appointment, ushering in the revival of optimal garage door functionality.
             </p>
          </div>
          <div id="gallery-bookmark">
