About-us - Logmont to Brighton

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <hr>
             <h2>About us</h2>
             <p>
-               If you're on the hunt for trustworthy and skilled solutions to mend your garage door in Longmont, CO,
+               If you're on the hunt for trustworthy and skilled solutions to mend your garage door in Brighton, CO,
                you've reached the right spot — our well-regarded garage door repair establishment. Our squad of adept
                technicians carries a wealth of industry experience and stands ready to manage projects of any magnitude.
                In our business, we are experts in a diverse array of garage door repair services. Whether it's
@@ -97,7 +97,7 @@
                proceedings. Beside our repair capacities, we extend installation services for fresh garage doors and
                openers. Our selection solely comprises top-tier products from premier manufacturers, assuring the
                enduring performance of your new garage door or opener. Bid adieu to the strain and vexation linked with
-               a malfunctioning garage door. Waste no time in contacting our Longmont, CO-based garage door repair
+               a malfunctioning garage door. Waste no time in contacting our Brighton, CO-based garage door repair
                enterprise to book an appointment, ushering in the revival of optimal garage door functionality.
             </p>
          </div>
