--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
    <meta charset="UTF-8">
    <meta name="keywords" content="Painting, Houses, Home, Garage, Door, GarageDoor, brush, repair, clean, cleaning">
-   <meta name="description" content="Arrowhead Garage Door Services in Colorado, US">
+   <meta name="description" content="ZGD Garage Door Services in Colorado, US">
    <meta name="author" content="Spartak Doe">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Arrowhead Garage Door Services</title>
+   <title>ZGD Garage Door Services</title>
    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
    <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet" href="hamburger_styles.css">
@@ -58,7 +58,7 @@
             <div class="upper-header">
                <div>
                   <h1 id="Handy-title">
-                     <span>Arrowhead Garage Door Services</span>
+                     <span>ZGD Garage Door Services</span>
                   </h1>
                </div>
                <img src="images/Handy.gif" alt="CompanyLogo">
@@ -74,9 +74,9 @@
             </div>
             <div class="lower-header">
                <picture id="header-image">
-                  <source media="(max-width: 480px)" srcset="images/header-image-480x270.jpeg" width="480">
-                  <source media="(min-width: 481px) and (max-width: 768px)" srcset="images/header-image-768x432.jpeg">
-                  <img src="images/header-image-1080x608.jpg" alt="header-image" width="1080" height="608">
+                  <source media="(max-width: 480px)" srcset="gallery/buisness-photo2.jpeg" width="480">
+                  <source media="(min-width: 481px) and (max-width: 768px)" srcset="gallery/buisness-photo2.jpeg">
+                  <img src="gallery/buisness-photo2.jpeg" alt="header-image" width="1080" height="608">
                </picture>
             </div>
          </div>
@@ -84,21 +84,21 @@
             <hr>
             <h2>About us</h2>
             <p>
-               If you're on the hunt for trustworthy and skilled solutions to mend your garage door in Brighton, CO,
-               you've reached the right spot — our well-regarded garage door repair establishment. Our squad of adept
-               technicians carries a wealth of industry experience and stands ready to manage projects of any magnitude.
-               In our business, we are experts in a diverse array of garage door repair services. Whether it's
-               rectifying fractures in torsion springs, rectifying glitches in garage door openers, or delivering
-               routine maintenance, our technicians are extensively trained and equipped with the prowess to rapidly
-               identify and resolve any garage door conundrums. Distinguishing ourselves through exceptional customer
-               service, we collaborate closely with you to ensure your distinct garage door repair prerequisites are
-               addressed. Whether you're seeking a swift fix or a comprehensive replacement, we provide a thorough
-               appraisal prior to initiating any undertakings, affording you precise insights into the forthcoming
-               proceedings. Beside our repair capacities, we extend installation services for fresh garage doors and
-               openers. Our selection solely comprises top-tier products from premier manufacturers, assuring the
-               enduring performance of your new garage door or opener. Bid adieu to the strain and vexation linked with
-               a malfunctioning garage door. Waste no time in contacting our Brighton, CO-based garage door repair
-               enterprise to book an appointment, ushering in the revival of optimal garage door functionality.
+               If you're in need of reliable and skilled garage door repair services in Brighton, CO, you've come to the
+               right place. We're a highly respected garage door repair company with a team of experienced technicians
+               who are well-equipped to handle projects of any size. Our expertise covers a wide range of garage door
+               repair services, including fixing torsion spring issues, resolving problems with garage door openers, and
+               providing regular maintenance. Our technicians are extensively trained and capable of quickly identifying
+               and resolving any garage door issues.
+               Setting ourselves apart with exceptional customer service, we work closely with you to ensure that your
+               specific garage door repair needs are met. Whether you require a quick fix or a complete replacement, we
+               conduct a thorough assessment before beginning any work, providing you with clear insights into the
+               upcoming process. In addition to our repair services, we also offer installation services for new garage
+               doors and openers. Our selection includes only top-quality products from leading manufacturers, ensuring
+               the long-lasting performance of your new garage door or opener.
+               Say goodbye to the stress and frustration of a malfunctioning garage door. Waste no time and get in touch
+               with our Brighton, CO-based garage door repair company to schedule an appointment, bringing about the
+               restoration of optimal garage door functionality.
             </p>
          </div>
          <div id="gallery-bookmark">
@@ -231,7 +231,7 @@
          <div class="navbar">
             <nav class="nav top">
                <div class="" id="hamburger"><button class="menu-toggle">Menu</button></div>
-               <div class="garage" id="PageTitle"><a href="">Arrowhead Garage Door Services from Elay</a></div>
+               <div class="garage" id="PageTitle"><a href="">ZGD Garage Door Services</a></div>
                <div class="action-list-2" id="Quotes"><a href="#" onclick="openQouteForm()">
                      <span class="material-symbols-outlined icons">request_quote</span>
                      <span class="text">Get Qoute</span>
